--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sentry/browser": "^5.10.0",
     "bootstrap": "^4.3.1",
     "firebase": "^6.3.5",
     "rc-menu": "^7.4.23",
